Set up location routes + user delete in api
