# api/database/main.go
@@ -7,11 +7,18 @@ import (
 func GetUsers() []models.User {
 	return GetUsersFromFile()
 }
-
+func AddUser(user models.User) error {
+	return AddUserToFile(user)
+}
+func DeleteUser(id int) error {
+	return DeleteUserFromFile(id)
+}
 func GetLocations() []models.Location {
 	return GetLocationsFromFile()
 }
-
-func AddUser(user models.User) error {
-	return AddUserToFile(user)
+func AddLocation(location models.Location) error {
+	return AddLocationToFile(location)
+}
+func DeleteLocation(id int) error {
+	return DeleteLocationFromFile(id)
 }
